--- a/src/views/listProducts.hbs
+++ b/src/views/listProducts.hbs
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Time Products</title>
+    <title>Real Time zProducts</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Lista de Productos</h1>
+        <h1>Listado de Productos</h1>
         <ul class="realTimeProductsContainer">
-            {{#each productos}}
+            {{#each products}}
                 <li class="styleList">
                     <strong>{{this.title}}</strong>
                     <img src="{{this.thumbnail}}" alt="imagen del producto">
