--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -14,8 +14,9 @@
             </h1>
 
             <div class="button-container">
-                <a href="http://localhost:8080/api/home" class="welcome-button glow-text">Listado de productos</a>
+                <a href="http://localhost:8080/api/listProducts" class="welcome-button glow-text">Listado de productos</a>
                 <a href="http://localhost:8080/api/realtimeproducts" class="welcome-button glow-text">agregar productos</a>
+                <a href="http://localhost:8080/api/chat" class="welcome-button glow-text">CHAT</a>
             </div>
         </div>
         <script src="/socket.io/socket.io.js"></script>
