--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -105,14 +105,15 @@ input[type="submit"]:hover {
     background-color: #45a049;
 }
 
- /* Estilos generales para la tabla */
+/* TABLA */
+
 table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 th, td {
@@ -127,24 +128,21 @@ th {
     background-color: #f5f5f5;
 }
 
-/* Estilos para los botones */
 button {
     padding: 10px 15px;
     margin: 5px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave para los botones */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
-/* Estilos específicos para el botón "Eliminar" */
 button.deleteProduct {
-    background-color: #d32f2f; /* Rojo oscuro */
+    background-color: #d32f2f;
     color: #fff;
 }
 
-/* Estilos específicos para el botón "Actualizar" */
 button.updateProduct {
-    background-color: #1565c0; /* Azul medio */
+    background-color: #1565c0; 
     color: #fff;
 }
