--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -1,4 +1,3 @@
-<!-- realTimeProducts.handlebars -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +47,7 @@
             </tr>
         </thead>
         <tbody id="realTimeProductTableBody">
-            {{#each realTimeViewProducts}}
+            {{#each products}}
                 <tr>
                     <td>{{this.title}}</td>
                     <td>{{this.price}}</td>
