--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -31,7 +31,7 @@ h1 {
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
-    width: calc(25% - 30px); /* Ajusta según tus preferencias */
+    width: calc(25% - 30px);
     margin: 15px;
     box-sizing: border-box;
 }
