--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -15,7 +15,7 @@
 
             <div class="button-container">
                 <a href="http://localhost:8080/api/listProducts" class="welcome-button glow-text">Listado de productos</a>
-                <a href="http://localhost:8080/api/carts/658ccaa426b638d9f9032dde">Carrito</a>
+                <a href="http://localhost:8080/api/carts/658ccaa426b638d9f9032dde"class="welcome-button glow-text">Carrito</a>
                 <a href="http://localhost:8080/api/realtimeproducts" class="welcome-button glow-text">agregar productos</a>
                 <a href="http://localhost:8080/api/chat" class="welcome-button glow-text">CHAT</a>
             </div>
