--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -18,6 +18,7 @@
 
         <button type="submit">Iniciar Sesión</button>
         <small> <p>¿No tienes una cuenta? <a href="/users/register">Registrarse</a></p></small>
+        <small> <p>¿Olvidaste tu contraseña? <a href="/users/updatePassword">Ingrese aqui</a></p></small>
     </form>
 
     <script src="/js/login.js"></script>
