--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -7,22 +7,22 @@
     <title>Registro de Usuario</title>
 </head>
 <body>
-    <form id="registerUsers" >
+    <form id="registerUsers" method="post" action="/api/session/register" >
     <h2>Registro de Usuario</h2>
-        <label for="first_name">Nombre:</label>
-        <input  id="first_name" name="first_name" >
+        <label >Nombre:</label>
+        <input name="first_name" required >
 
-        <label for="last_name">Apellido:</label>
-        <input  id="last_name" name="last_name" >
+        <label >Apellido:</label>
+        <input  name="last_name" required>
 
-        <label for="email">Correo Electrónico:</label>
-        <input  id="email" name="email" >
+        <label >Correo Electrónico:</label>
+        <input type="email" name="email"required >
 
-        <label for="age">Edad:</label>
-        <input  id="age" name="age" >
+        <label >Edad:</label>
+        <input name="age" required>
 
-        <label for="password">Contraseña:</label>
-        <input id="password" name="password" >
+        <label >Contraseña:</label>
+        <input type="password" name="password" required >
 
         <button type="submit">Registrar</button> 
         <small><p>¿Ya tienes una cuenta? <a href="/users/login">Iniciar Sesión</a></p></small>
