--- a/src/public/css/registerStyle.css
+++ b/src/public/css/registerStyle.css
@@ -1,8 +1,6 @@
-/* register.css */
-
 body {
-    background-color: #000000; /* Negro */
-    color: #ffffff; /* Letras blancas */
+    background-color: #000000; 
+    color: #ffffff; 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     align-items: center;
@@ -15,23 +13,23 @@ form {
     max-width: 400px;
     width: 100%;
     padding: 30px;
-    background-color: #1f1f1f; /* Gris oscuro */
+    background-color: #1f1f1f; 
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.3); /* Sutil sombra */
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.3); 
 }
 
 h2 {
     text-align: center;
     font-size: 28px;
     margin-bottom: 20px;
-    color: #8a2be2; /* Violeta brillante */
+    color: #8a2be2; 
 }
 
 label {
     display: block;
     margin-top: 15px;
     font-size: 16px;
-    color: #ffffff; /* Letras blancas */
+    color: #ffffff; 
 }
 
 input {
@@ -39,22 +37,22 @@ input {
     padding: 12px;
     margin-top: 8px;
     box-sizing: border-box;
-    border: 2px solid #8a2be2; /* Borde violeta brillante */
+    border: 2px solid #8a2be2; 
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.2); /* Fondo semi-transparente */
-    color: #ffffff; /* Letras blancas */
+    background-color: rgba(255, 255, 255, 0.2); 
+    color: #ffffff; 
     font-size: 14px;
     transition: border-color 0.3s, background-color 0.3s;
 }
 
 input:focus {
-    border-color: #8000ff; /* Borde violeta más oscuro al enfocar */
-    background-color: rgba(255, 255, 255, 0.3); /* Fondo semi-transparente más claro al enfocar */
+    border-color: #8000ff; 
+    background-color: rgba(255, 255, 255, 0.3); 
 }
 
 button {
-    background-color: #8a2be2; /* Violeta brillante */
-    color: #000000; /* Contraste negro */
+    background-color: #8a2be2; 
+    color: #000000; 
     padding: 12px;
     border: none;
     cursor: pointer;
@@ -65,11 +63,11 @@ button {
 }
 
 button:hover {
-    background-color: #7a0086; /* Violeta brillante más oscuro al pasar el ratón */
+    background-color: #7a0086; 
 }
 
 a {
-    color: #ffffff; /* Letras blancas */
+    color: #ffffff;
     text-decoration: none;
     margin-top: 20px;
     display: inline-block;
@@ -77,5 +75,5 @@ a {
 }
 
 a:hover {
-    color: #ff8c00; /* Naranja más oscuro al pasar el ratón */
+    color: #ff8c00; 
 }
