--- a/src/views/github-login.hbs
+++ b/src/views/github-login.hbs
@@ -1,6 +1,6 @@
 <div>
     <h1> Logueate usando github </h1>
-    <a href="/api/sessions/github"><button> Entrar con github </button></a>
+    <a href="/sessions/github"><button> Entrar con github </button></a>
     <br>
     <h4> No quieres usar Github? Puede usar nuestros enlaces </h4>
     <p> No estas registrado? <a href="/users/register"> Registrate aqui </a></p>
