--- a/src/views/listProducts.hbs
+++ b/src/views/listProducts.hbs
@@ -1,93 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-dlI1RnPh9fmpa6Kx94j5KbNK4OV1paT1I9byXgP8z0lVzIOJwS0GYWI24XuweUs6P53XNqLfzGQ7H5+uYddskw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
     <div class="navbar">
-    <a href="#home" class="nav-item">Inicio</a>
-    <a href="#news" class="nav-item">agregar producto</a>
-    <div class="dropdown">
-        <button class="dropbtn">Productos
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-            <a href="#category1" class="dropdown-item">Categoría 1</a>
-            <a href="#category2" class="dropdown-item">Categoría 2</a>
-            <a href="#category3" class="dropdown-item">Categoría 3</a>
+        <a href="/products" class="nav-item">Inicio</a>
+        <a href="/realtimeproducts" class="nav-item">Agregar producto</a>
+        <div class="dropdown">
+            <button class="dropbtn">Productos
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#category1" class="dropdown-item">Categoría 1</a>
+                <a href="#category2" class="dropdown-item">Categoría 2</a>
+                <a href="#category3" class="dropdown-item">Categoría 3</a>
+            </div>
+        </div>
+        <div class="user-section">
+            <a href="/users/login" class="nav-item" id="loginBtn">Iniciar Sesión</a>
+            <a href="/users/register" class="nav-item" id="registerBtn">Registrarse</a>
+            <a href="/users/profile" class="nav-item" id="registerBtn">Profile</a>
+            <div class="icon" id="userIcon">
+                <i class="fa fa-user"></i>
+            </div>
+
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Buscar..." id="searchInput">
+            <button type="submit" id="searchBtn"><i class="fa fa-search"></i></button>
+        </div>
+        <div class="icon" id="cartIcon">
+            <i class="fa fa-shopping-cart"></i>
+            <span class="badge" id="cartCount">0</span>
+        </div>
+        <div class="icon" id="languageIcon">
+            <i class="fa fa-language"></i>
         </div>
     </div>
-    <div class="user-section">
-        <a href="#login" class="nav-item" id="loginBtn">Iniciar Sesión</a>
-        <a href="#register" class="nav-item" id="registerBtn">Registrarse</a>
-        <div class="icon" id="userIcon">
-            <i class="fa fa-user"></i>
-        </div>
-    </div>
-    <div class="search-bar">
-        <input type="text" placeholder="Buscar..." id="searchInput">
-        <button type="submit" id="searchBtn"><i class="fa fa-search"></i></button>
-    </div>
-    <div class="icon" id="cartIcon">
-        <i class="fa fa-shopping-cart"></i>
-        <span class="badge" id="cartCount">0</span>
-    </div>
-    <div class="icon" id="languageIcon">
-        <i class="fa fa-language"></i>
-    </div>
-</div>
 
     <div class="container">
         <h1>Listado de Productos</h1>
 
         <div class="sort-buttons">
-    <a href="/api/listProducts?page={{page}}&sort=asc" class="sort-button" id="asc-button">Ascender</a>
-    <a href="/api/listProducts?page={{page}}&sort=desc" class="sort-button" id="desc-button">Descender</a>
-</div>
+            <a href="/products?page={{page}}&sort=asc" class="sort-button" id="asc-button">Ascender</a>
+            <a href="/products?page={{page}}&sort=desc" class="sort-button" id="desc-button">Descender</a>
+        </div>
 
         <ul class="ProductsContainer">
             {{#each products}}
-                <li class="styleList">
-                    <strong>{{this.title}}</strong>
-                    <img src="{{this.thumbnail}}" alt="imagen del producto">
-                    <p>{{this.description}}</p>
-                    <div class="details">
-                        <p class="detailTitle"><b>Precio:</b></p>
-                        <p class="detailContent">{{this.price}}</p>
-                    </div>
-                    <div class="details">
-                        <p class="detailTitle"><b>Categoría:</b></p>
-                        <p class="detailContent">{{this.category}}</p>
-                    </div>
-                    <div class="details">
-                        <p class="detailTitle"><b>Stock:</b></p>
-                        <p class="detailContent">{{this.stock}}</p>
-                    </div>
+            <li class="styleList">
+                <strong>{{this.title}}</strong>
+                <img src="{{this.thumbnail}}" alt="imagen del producto">
+                <p>{{this.description}}</p>
+                <div class="details">
+                    <p class="detailTitle"><b>Precio:</b></p>
+                    <p class="detailContent">{{this.price}}</p>
+                </div>
+                <div class="details">
+                    <p class="detailTitle"><b>Categoría:</b></p>
+                    <p class="detailContent">{{this.category}}</p>
+                </div>
+                <div class="details">
+                    <p class="detailTitle"><b>Stock:</b></p>
+                    <p class="detailContent">{{this.stock}}</p>
+                </div>
 
-                    <a href="/api/listProducts/details/{{this._id}}">Ver detalles</a>
+                <a href="/listProducts/details/{{this._id}}" class="cta-details">Ver detalles</a>
 
-                    <input type="submit" value="Agregar al carrito" id="">
-                </li>
+                <button class="cta-cart" id="addToCartBtn">Agregar al carrito</button>
+            </li>
             {{/each}}
         </ul>
     </div>
-    
+
     <div class="pagination-buttons">
         {{#if hasPrevPage}}
-            <a href="/api/listProducts?page={{add page -1}}&sort={{sort}}" class="pagination-button">Anterior</a>
+        <a href="/products?page={{add page -1}}&sort={{sort}}" class="pagination-button">Anterior</a>
         {{/if}}
         {{#if hasNextPage}}
-            <a href="/api/listProducts?page={{add page 1}}&sort={{sort}}" class="pagination-button">Siguiente</a>
+        <a href="/products?page={{add page 1}}&sort={{sort}}" class="pagination-button">Siguiente</a>
         {{/if}}
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/main.js"></script>
+    <script src=""></script>
 </body>
+
 </html>
