--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -11,14 +11,15 @@
     <form id="loginUsers">
     <h2>Iniciar Sesión</h2>
         <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+        <input name="email" required>
 
         <label for="password">Contraseña:</label>
-        <input type="text" id="password" name="password" required>
+        <input type="password" name="password" required>
 
         <button type="submit">Iniciar Sesión</button>
         <small> <p>¿No tienes una cuenta? <a href="/users/register">Registrarse</a></p></small>
         <small> <p>¿Olvidaste tu contraseña? <a href="/users/updatePassword">Ingrese aqui</a></p></small>
+        <button> <a href="/github/login">Ingresa con Github</a> </button>
     </form>
 
     <script src="/js/login.js"></script>
