--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <div class="navbar">
+    <a href="/products" class="nav-item">Inicio</a>
+    <a href="/realtimeproducts" class="nav-item">agregar producto</a>
+    <div class="dropdown">
+        <button class="dropbtn">Productos
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="#category1" class="dropdown-item">Categoría 1</a>
+            <a href="#category2" class="dropdown-item">Categoría 2</a>
+            <a href="#category3" class="dropdown-item">Categoría 3</a>
+        </div>
+    </div>
+    <div class="user-section">
+        <a href="/users/login" class="nav-item" id="loginBtn">Iniciar Sesión</a>
+        <a href="/users/register" class="nav-item" id="registerBtn">Registrarse</a>
+        <div class="icon" id="userIcon">
+            <i class="fa fa-user"></i>
+        </div>
+        
     <div class="container">
     <div>
         <form method="post" id="realTimeForm">
@@ -66,6 +87,6 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/RealTimeProductsContainer.js"></script>
+    <script src="/js/RealTimeProducts.js"></script>
 </body>
 </html>
