--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -7,7 +7,7 @@
     <title>Registro de Usuario</title>
 </head>
 <body>
-    <form id="registerUsers" method="post" action="/api/session/register" >
+    <form id="registerUsers" >
     <h2>Registro de Usuario</h2>
         <label >Nombre:</label>
         <input name="first_name" required >
